--- a/.github/workflows/gmx_tracker.yml
+++ b/.github/workflows/gmx_tracker.yml
@@ -1,24 +1,32 @@
-name: GMX GLP Tracker
+name: GMX Fees Tracker
 
 on:
   schedule:
-    - cron: '0 * * * *'  # запуск каждый час
-  workflow_dispatch:  # возможность вручную запускать через GitHub
+    - cron: '0 0 * * *'     # 00:00 UTC
+    - cron: '0 12 * * *'    # 12:00 UTC
+    - cron: '0 18 * * *'    # 18:00 UTC
+  workflow_dispatch:        # возможность вручную запускать
 
 jobs:
-  run-tracker:
+  run-script:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Клонируем репозиторий
+      - name: Клонирование репозитория
         uses: actions/checkout@v3
 
-      - name: Устанавливаем Python
+      - name: Установка Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Устанавливаем зависимости
+      - name: Установка зависимостей
         run: pip install requests
 
-      - name: Запускаем сбор данных
-        run: python fetch_gmx_data.py
+      - name: Запуск скрипта
+        run: python fetch_gmx_fees.py
+
+      - name: Сохранение результатов
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Автоматическое обновление CSV с Fees
