--- a/.github/workflows/gmx_tracker.yml
+++ b/.github/workflows/gmx_tracker.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 0 * * *'     # 00:00 UTC
     - cron: '0 12 * * *'    # 12:00 UTC
     - cron: '0 18 * * *'    # 18:00 UTC
-  workflow_dispatch:        # возможность вручную запускать
+  workflow_dispatch:
 
 jobs:
   run-script:
@@ -26,7 +26,7 @@ jobs:
       - name: Запуск скрипта
         run: python fetch_gmx_fees.py
 
-      - name: Сохранение результатов
+      - name: Автокоммит изменений (CSV)
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Автоматическое обновление CSV с Fees
+          commit_message: Обновление данных Fees
