--- a/.github/workflows/gmx_tracker.yml
+++ b/.github/workflows/gmx_tracker.yml
@@ -2,31 +2,34 @@ name: GMX Fees Tracker
 
 on:
   schedule:
-    - cron: '0 0 * * *'     # 00:00 UTC
-    - cron: '0 12 * * *'    # 12:00 UTC
-    - cron: '0 18 * * *'    # 18:00 UTC
+    - cron: '0 0,12,18 * * *'
   workflow_dispatch:
 
-jobs:
-  run-script:
-    runs-on: ubuntu-latest
+permissions:
+  contents: write
 
+jobs:
+  track-fees:
+    runs-on: ubuntu-latest
     steps:
-      - name: Клонирование репозитория
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Установка Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: 3.10
 
-      - name: Установка зависимостей
+      - name: Install dependencies
         run: pip install requests
 
-      - name: Запуск скрипта
-        run: python fetch_gmx_fees.py
+      - name: Run GMX tracker
+        run: python gmx_tracker.py
 
-      - name: Автокоммит изменений (CSV)
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: Обновление данных Fees
+      - name: Commit changes
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git add fees_log.csv
+          git commit -m "Update fees_log.csv" || echo "No changes to commit"
+          git push
