--- a/.github/workflows/gmx_tracker.yml
+++ b/.github/workflows/gmx_tracker.yml
@@ -1,16 +1,14 @@
-name: GMX Fees Tracker
+name: Fetch GMX Fees
 
 on:
   schedule:
-    - cron: '0 0,12,18 * * *'
+    - cron: '0 0,12,18 * * *'  # 00:00, 12:00, 18:00 UTC
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
-  track-fees:
+  fetch-fees:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -18,15 +16,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: 3.11
 
       - name: Install dependencies
         run: pip install requests
 
-      - name: Run GMX tracker
+      - name: Run tracker script
         run: python gmx_tracker.py
 
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: Обновление данных Fees
+      - name: Commit updated data
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add data/*
+          git commit -m "Update fees data" || echo "No changes to commit"
+          git push
