--- a/.github/workflows/gmx_tracker.yml
+++ b/.github/workflows/gmx_tracker.yml
@@ -2,7 +2,7 @@ name: GMX Tracker
 
 on:
   schedule:
-    - cron: '0 0,12,18 * * *'
+    - cron: '0 0,12,18 * * *'  # 00:00, 12:00 и 18:00 по UTC
   workflow_dispatch:
 
 jobs:
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -21,15 +23,13 @@ jobs:
       - name: Install dependencies
         run: pip install requests
 
-      - name: Run tracker
+      - name: Run tracker script
         run: python gmx_tracker.py
 
-      - name: Commit and push changes
+      - name: Commit and push fees log
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add gmx_fees_log.json
-          git commit -m "Add fees log"
-          git push
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git commit -m "Update fees log"
+          git push origin HEAD:${{ github.ref }}
