--- a/.github/workflows/gmx_tracker.yml
+++ b/.github/workflows/gmx_tracker.yml
@@ -12,8 +12,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -27,9 +25,11 @@ jobs:
         run: python gmx_tracker.py
 
       - name: Commit and push fees log
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add gmx_fees_log.json
-          git commit -m "Update fees log"
+          git add fees_log.json
+          git commit -m "Update fees log" || echo "No changes to commit"
           git push origin HEAD:${{ github.ref }}
